# atelier_oops

./: README.md
python/: .gitignore  README.md  pyproject.toml
python/ping/: cli.py  client.py  exec.py  main.py  ping_logging.py  response.py  stats.py
python/scripts/: lint.sh  run.sh
python/tests/: test_stats.py
rust/: Cargo.toml  README.md
rust/scripts/: exec.sh  lint.sh
rust/src/: cli.rs  client.rs  exec.rs  logging.rs  main.rs  response.rs  stats.rs
typescript/: README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: cli.ts  client.ts  exec.ts  index.ts  logging.ts  response.ts  stats.spec.ts  stats.ts
