[tool.poetry]
# TODO

[tool.poetry.dependencies]
python = "^3.9"
# TODO

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
types-requests = "^2.28.11.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
